xorg-server (2:1.9.4-3) UNRELEASED; urgency=low

  * Maintainer script clean-up:
    - xserver-xorg-core.preinst.in: Remove, 1.5 is long gone.
    - xserver-xorg-core.postinst.in: Remove, 1.5 is long gone, and 1.7.4
      was between lenny and squeeze.

 -- Cyril Brulebois <kibi@debian.org>  Sat, 19 Feb 2011 17:37:18 +0100

xorg-server (2:1.9.4-2) unstable; urgency=low

  * Put an end to the dependency hell! Now that we have proper
    dependencies between drivers and the server, remove xserver-xorg from
    xserver-xorg-core's Depends (Closes: #362313). In a nutshell, one may
    want to choose between installing:
    - xserver-xorg-core: the server itself, with no strings attached.
    - xserver-xorg: pulls the server and drivers, contains the X wrapper
      and some documentation.
    - xorg: pulls xserver-xorg as well as various X11 clients and fonts.
  * bug script: Report KMS configuration files and their contents.
  * bug script: Keep only one lspci call (with proper filtering), which
    makes PCI IDs come back.
  * bug script: Report libGL-related diversions.
  * Stop providing xorg-input-abi-11.0 and xorg-video-abi-8.0 now that
    drivers have reached unstable.
  * Merge server-1.9-branch up to 0a4b0de9af.

 -- Cyril Brulebois <kibi@debian.org>  Wed, 16 Feb 2011 23:17:07 +0100

xorg-server (2:1.9.4-1) unstable; urgency=low

  * The “squeeze is released, target sid!” upload.
  * New upstream release.
  * Unfuzzy all patches.
  * Get rid of long obsolete NEWS file.
  * Replace “--remaining-packages” with “-Nfoo -Nbar” in the “dh_strip -s”
    call, to avoid non-stripped binaries if the build is resumed.
  * Use “dh_prep” instead of deprecated “dh_clean -k”.
  * Bump debhelper build-dep accordingly.
  * Introduce dh_xsf_substvars, to be used in driver packages to set
    appropriate substitution variables for Depends and Provides, before
    calling dh_gencontrol. Ship it in xserver-xorg-dev.